# webcap

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
pywitness/: base.py  browser.py  cli.py  errors.py  tab.py
pywitness/test/: test_pywitness.py
test/: conftest.py  helpers.py  test_cli.py  test_helpers.py  test_webcap.py
webcap/: __init__.py  base.py  browser.py  cli.py  defaults.py  errors.py  helpers.py  imagehash.py  javascript.py  tab.py  webscreenshot.py
webcap/server/: server.py
webcap/server/templates/: index.html
webcap/test/: conftest.py  helpers.py  test_cli.py  test_helpers.py  test_webcap.py
